--- a/examples/web_interface.html
+++ b/examples/web_interface.html
@@ -45,7 +45,13 @@
 </head>
 <body>
     <div id="status">Disconnected</div>
-    
+
+    <p style="margin: 20px;">
+        Use <b>W</b>, <b>A</b>, <b>S</b>, <b>D</b> to move/turn.<br>
+        Press <b>Q</b> to stop movement.<br>
+        Releasing any key also stops the robot.
+    </p>
+
     <div class="control-pad">
         <button class="control-button" 
                 ontouchstart="sendVelocity(0.3, -1.3)" ontouchend="sendVelocity(0, 0)"
