--- a/examples/web_interface.html
+++ b/examples/web_interface.html
@@ -49,17 +49,41 @@
 </head>
 <body>
     <div id="status">Disconnected</div>
-    
+
+    <p style="margin: 20px;">
+        Use <b>W</b>, <b>A</b>, <b>S</b>, <b>D</b> to move/turn.<br>
+        Press <b>Q</b> to stop movement.<br>
+        Releasing any key also stops the robot.
+    </p>
+
     <div class="control-pad">
-        <button class="control-button" ontouchstart="sendVelocity(0.3, -1.3)" ontouchend="sendVelocity(0, 0)"> </button>
-        <button class="control-button" ontouchstart="sendVelocity(0.3, 0)" ontouchend="sendVelocity(0, 0)">^</button>
-        <button class="control-button" ontouchstart="sendVelocity(0.3, 1.3)" ontouchend="sendVelocity(0, 0)"> </button>
-        <button class="control-button" ontouchstart="sendVelocity(0, -1.3)" ontouchend="sendVelocity(0, 0)"><</button>
-        <button class="control-button" ontouchstart="sendVelocity(0, 0)" ontouchend="sendVelocity(0, 0)">+</button>
-        <button class="control-button" ontouchstart="sendVelocity(0, 1.3)" ontouchend="sendVelocity(0, 0)">></button>
-        <button class="control-button" ontouchstart="sendVelocity(-0.3, -1.3)" ontouchend="sendVelocity(0, 0)"> </button>
-        <button class="control-button" ontouchstart="sendVelocity(-0.3, 0)" ontouchend="sendVelocity(0, 0)">v</button>
-        <button class="control-button" ontouchstart="sendVelocity(-0.3, 1.3)" ontouchend="sendVelocity(0, 0)"> </button>
+        <button class="control-button"
+                ontouchstart="sendVelocity(0.3, -1.3)" ontouchend="sendVelocity(0, 0)"
+                onmousedown="sendVelocity(0.3, -1.3)" onmouseup="sendVelocity(0, 0)"> </button>
+        <button class="control-button"
+                ontouchstart="sendVelocity(0.3, 0)" ontouchend="sendVelocity(0, 0)"
+                onmousedown="sendVelocity(0.3, 0)" onmouseup="sendVelocity(0, 0)">^</button>
+        <button class="control-button"
+                ontouchstart="sendVelocity(0.3, 1.3)" ontouchend="sendVelocity(0, 0)"
+                onmousedown="sendVelocity(0.3, 1.3)" onmouseup="sendVelocity(0, 0)"> </button>
+        <button class="control-button"
+                ontouchstart="sendVelocity(0, -1.3)" ontouchend="sendVelocity(0, 0)"
+                onmousedown="sendVelocity(0, -1.3)" onmouseup="sendVelocity(0, 0)"><</button>
+        <button class="control-button"
+                ontouchstart="sendVelocity(0, 0)" ontouchend="sendVelocity(0, 0)"
+                onmousedown="sendVelocity(0, 0)" onmouseup="sendVelocity(0, 0)">+</button>
+        <button class="control-button"
+                ontouchstart="sendVelocity(0, 1.3)" ontouchend="sendVelocity(0, 0)"
+                onmousedown="sendVelocity(0, 1.3)" onmouseup="sendVelocity(0, 0)">></button>
+        <button class="control-button"
+                ontouchstart="sendVelocity(-0.3, -1.3)" ontouchend="sendVelocity(0, 0)"
+                onmousedown="sendVelocity(-0.3, -1.3)" onmouseup="sendVelocity(0, 0)"> </button>
+        <button class="control-button"
+                ontouchstart="sendVelocity(-0.3, 0)" ontouchend="sendVelocity(0, 0)"
+                onmousedown="sendVelocity(-0.3, 0)" onmouseup="sendVelocity(0, 0)">v</button>
+        <button class="control-button"
+                ontouchstart="sendVelocity(-0.3, 1.3)" ontouchend="sendVelocity(0, 0)"
+                onmousedown="sendVelocity(-0.3, 1.3)" onmouseup="sendVelocity(0, 0)"> </button>
     </div>
 
     <div class="speech-box">
@@ -79,7 +103,7 @@
         const mqttHost = username.includes('.') ? hostname : `${username}-bracketbot.local`;
         console.log("MQTT host:", mqttHost);
         const client = mqtt.connect(`ws://${mqttHost}:9001`);
-        
+
         client.on('connect', function () {
             document.getElementById('status').style.color = 'green';
             document.getElementById('status').innerHTML = 'Connected';
@@ -152,6 +176,39 @@
                 updateVelocity();
             }
         });
+
+        function onKeyDown(event) {
+            const key = event.key.toLowerCase();
+            switch (key) {
+                case 'w':
+                    sendVelocity(0.5, 0.0);
+                    break;
+                case 's':
+                sendVelocity(-0.5, 0.0);
+                    break;
+                case 'a':
+                sendVelocity(0.0, 45.0);
+                    break;
+                case 'd':
+                sendVelocity(0.0, -45.0);
+                    break;
+                case 'q':
+                sendVelocity(0.0, 0.0);
+                    break;
+                default:
+                    break;
+            }
+        }
+
+        function onKeyUp(event) {
+            const key = event.key.toLowerCase();
+            if (['w','a','s','d','arrowup','arrowdown','arrowleft','arrowright'].includes(key)) {
+                sendVelocity(0.0, 0.0);
+            }
+        }
+
+        document.addEventListener('keydown', onKeyDown);
+        document.addEventListener('keyup', onKeyUp);
 
         function updateVelocity() {
             // Calculate linear velocity (forward/backward)
